--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ scikit-learn
 dice_ml
 numpy==1.22
 pandas==1.3.4
+python-multipart      # For handling file uploads if needed
+typing-extensions     # For FastAPI compatibility
