--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ fastapi
 uvicorn
 requests
 lime
-shap==0.41.0          # Version known to be more compatible with higher numpy versions
-numpy==1.22.0         # Satisfies the requirement for Numba
-scipy==1.8.0          # Compatible with numpy 1.22.x
+shap==0.41.0
+numpy==1.22.0
+scipy==1.8.0
 scikit-learn
 dice_ml
-pandas==1.4.0         # Compatible with numpy 1.22
-python-multipart      # For handling file uploads if needed
-typing-extensions     # For FastAPI compatibility
+pandas==1.4.0
+python-multipart
+typing-extensions
