--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ lime
 shap==0.41.0
 numpy==1.22.0
 scipy==1.8.0
-scikit-learn
+scikit-learn==1.0.2
+joblib==1.1.0
 dice_ml
-pandas==1.4.0
+pandas==1.3.4
 python-multipart
 typing-extensions
