--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn
 requests
 lime
 shap==0.41.0
-numpy==1.22.0
-scipy==1.9.3
+numpy==1.22.4  # Latest 1.22.x version known for better compatibility
+scipy==1.8.0   # Compatible with numpy 1.22 and scikit-learn 1.0.2
 scikit-learn==1.0.2
 joblib==1.1.0
 dice_ml
