--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
+scikit-learn==1.5.2
+numpy==1.23.5  # Compatible with scikit-learn 1.5.2
+scipy==1.9.3   # Compatible with numpy 1.23.5 and scikit-learn 1.5.2
+joblib==1.3.0  # Matches scikit-learn 1.5.2 requirements
 fastapi
 uvicorn
 requests
 lime
 shap==0.41.0
-numpy==1.22.4  # Latest 1.22.x version known for better compatibility
-scipy==1.8.0   # Compatible with numpy 1.22 and scikit-learn 1.0.2
-scikit-learn==1.5.2
-joblib==1.2.0
 dice_ml
 pandas==1.3.4
 python-multipart
