--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-scikit-learn==1.5.2
-numpy==1.23.5  # Compatible with scikit-learn 1.5.2
-scipy==1.9.3   # Compatible with numpy 1.23.5 and scikit-learn 1.5.2
-joblib==1.3.0  # Matches scikit-learn 1.5.2 requirements
+scikit-learn==1.0.2
+numpy==1.22.4  
+scipy==1.7.3   
+joblib==1.3.0  
 fastapi
 uvicorn
 requests
