--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ shap==0.41.0
 pandas==1.3.4
 python-multipart
 typing-extensions
-torch==2.0.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torch==2.0.0
 transformers
 sentence-transformers
