--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-scikit-learn==1.0.2
+scikit-learn==1.1.1
 numpy==1.22.4  
-scipy==1.7.3   
+scipy==1.8.0   
 joblib==1.3.0  
 fastapi
 uvicorn
 requests
-lime
-shap==0.41.0
+lime==0.2.0.1
 pandas==1.3.4
 python-multipart
 typing-extensions
-dice_ml==0.9
-spacy
-anchor-explicability
-
+spacy==3.5.0
+alibi
