--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 scikit-learn==1.1.1
-numpy==1.22.4  
-scipy==1.8.0   
-joblib==1.3.0  
+numpy==1.22.4
+scipy==1.8.0
+joblib==1.3.0
 fastapi
 uvicorn
 requests
@@ -9,5 +9,6 @@ lime==0.2.0.1
 pandas==1.3.4
 python-multipart
 typing-extensions
-spacy==3.5.0
+spacy>=3.5.0,<3.6.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz#egg=en_core_web_sm
 alibi
